[gd_scene load_steps=5 format=3 uid="uid://h6cvw0kg2yd4"]

[ext_resource type="Texture2D" uid="uid://ca2nq6odvmpqm" path="res://Scenes/UI/HUD/under.png" id="1_ft5o4"]
[ext_resource type="Script" path="res://Scenes/UI/HUD/HUD.gd" id="1_jlgou"]
[ext_resource type="Texture2D" uid="uid://ch23p8a4vcvhy" path="res://Scenes/UI/HUD/progress.png" id="2_4fo4l"]
[ext_resource type="FontFile" uid="uid://cch1dxiah5qsd" path="res://Resources/Themes/fonts/SpaceMono-Regular.ttf" id="3_br6mm"]

[node name="HUD" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_jlgou")

[node name="Front" type="CanvasLayer" parent="."]

[node name="H" type="HBoxContainer" parent="Front"]
layout_direction = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="PlayerStats" type="VBoxContainer" parent="Front/H"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.25

[node name="Health" type="MarginContainer" parent="Front/H/PlayerStats"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 0.05
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5

[node name="HealthBar" type="TextureProgressBar" parent="Front/H/PlayerStats/Health"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 0.1
nine_patch_stretch = true
texture_under = ExtResource("1_ft5o4")
texture_progress = ExtResource("2_4fo4l")

[node name="Ammo" type="MarginContainer" parent="Front/H/PlayerStats"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 0.05
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 15
theme_override_constants/margin_bottom = 5

[node name="H" type="HBoxContainer" parent="Front/H/PlayerStats/Ammo"]
layout_mode = 2

[node name="null" type="Control" parent="Front/H/PlayerStats"]
layout_mode = 2
size_flags_vertical = 3

[node name="GameStats" type="VBoxContainer" parent="Front/H"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Score" type="MarginContainer" parent="Front/H/GameStats"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 0.05
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5

[node name="Label" type="Label" parent="Front/H/GameStats/Score"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_br6mm")
text = "Score: 123"
horizontal_alignment = 2

[node name="Control" type="Control" parent="Front/H/GameStats"]
layout_mode = 2
size_flags_vertical = 3
